--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,81 @@
-.box {
-    width: 200px;
-    height: 125px;
-    background: greenyellow;
+h1 {
+    width: 65%;
+    background: brown;
+    color: bisque;
+    padding: 15px;
+    margin-left: 20px;
+    font-size: 32px;
+}
 
+.box {
+    width: 30%;
+    height: 100px;
+    background: cadetblue;
+    color: bisque;
+    font-size: 32px;
+    float: left; 
+    margin-left: 20px; 
+    padding-top: 30px;
+    margin-top: 20px;
+}
+
+p {
+    width: 65%;
+    background: bisque;
+    color: cadetblue;
+    padding: 15px;
+    margin-left: 20px;
+    margin-top: 20px;
+}
+
+.rocks {
+    margin-top: 20px;
+}
+
+#crystal1 {
+    clear: both;
+    float: left;
+    margin-left: 20px;
+    width: 15%;
+}
+
+#crystal2 {
+    float: left;
+    margin-left: 20px;
+    width: 15%;
+}
+
+#crystal3 {
+    float: left;
+    margin-left: 20px;
+    width: 15%;
+}
+
+#crystal4 {
+    float: left;
+    margin-left: 20px;
+    width: 15%;
+}
+
+.status {
+    background: cadetblue;
+    color: bisque;
+    width: 16%;
+    float: left;
+    margin-left: 15px;
+    height: 100px;
+    padding-top: 30px;
+    font-size: 32px;
+    margin-top: 20px;
+}
+
+#total-score {
+    clear: both;
+    background: cadetblue;
+    color: bisque;
+    width: 30%;
+    height: 100px;
+    font-size: 32px;
+    margin-left: 20px;
+    padding-top: 30px;
 }
